# market-predictor

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yml
configs/: attestation_trust_store.example.json  default.toml  drift_policy.toml  intraday_dataset.toml  intraday_promotion.toml  intraday_training.toml  swing_dataset.toml  swing_promotion.toml  swing_training.toml
docs/: azure_deployment_plan.md  catalyst_confirmation_architecture.md  implementation_guide.md  intraday_model_promotion.md  legacy_alert_rule_parity.md  ml_model_v3_plan.md  production_ml_rebuild_plan.md  rapidapi_mcp.md  trading_flow_integration_plan.md
docs/model_cards/: v3_c8_b0_20260711.md  v3_c8_b1_20260711.md  v3_c8_b2_20260711.md  v3_c8_d1_20260711.md  v3_c8_failure_attribution_20260721.md  v3_c8_o1_20260721.md  v3_c8_r1_20260720.md  v4_h1_120m_20260721.md
docs/reviews/: ml_production_architecture_review_2026-07-22.md  ml_statistical_validity_review_2026-07-22.md  next_model_handoff_2026-07-22.md  next_model_handoff_2026-07-23.md  r1_r6_independent_reaudit_2026-07-24.md  r7_independent_reaudit_2026-07-24.md  remediation_plan_2026-07-22.md  senior_ml_review_context_2026-07-22.md
mcp/: rapidapi-seeking-alpha.mcp.json.example
scripts/: __init__.py  azure_nightly.sh  build_container_smoke_release.py  build_volatile_mover_universe.py  container-entrypoint.sh  lock_dependencies.py  promotion_fixture.py  register_live_midnight_task.ps1  register_live_train_task.ps1  run_live_midnight.ps1  run_live_train_event.ps1
src/market_predictor/: admission.py  alerts.py  api.py  api_security.py  app_config.py  azure_store.py  catalyst_overlay.py  causal_shadow.py  cli.py  cli_surface.py  collection_cli.py  config.py  data_quality.py  deployment.py  drift.py  drift_policy.py  entry_exit.py  execution_policy.py  feature_store.py  features.py  global_context.py  hypothesis_registry.py  intraday_catalysts.py  intraday_confirmation.py  intraday_enrichment.py  intraday_universe.py  investment_replay.py  jwt_verification.py  label_paths.py  label_policy.py  label_reconciliation.py  live_features.py  locking.py  market_regime.py  model.py  outcome_contracts.py  outcome_intents.py  outcome_maturation.py  outcome_repository.py  outcome_worker.py  (+26 more)
src/market_predictor/canonical/: __init__.py  audits.py  contracts.py  cutoffs.py  joins.py  normalize.py  reconciliation.py  store.py  symbol_master.py
src/market_predictor/commands/: __init__.py  canonical_data.py  configuration.py  intraday_model.py  outcomes.py  production.py  ranking.py  release.py  swing_model.py  v3_data.py  v3_evaluation.py  v3_features.py  v3_labels.py  v3_models.py  v3_readiness.py
src/market_predictor/intraday/: __init__.py  audits.py  contracts.py  dataset.py  evaluation.py  labels.py  model.py  promotion.py
src/market_predictor/sources/: __init__.py  alpaca.py  finviz.py  gdelt.py  http.py  reddit.py  sec.py  seeking_alpha.py  seeking_alpha_mcp.py
src/market_predictor/swing/: __init__.py  audits.py  contracts.py  dataset.py  evaluation.py  labels.py  model.py  promotion.py
src/market_predictor/v3/: __init__.py  audits.py  calibration.py  catalysts.py  contracts.py  development.py  diagnostics.py  errors.py  evaluation.py  features.py  labels.py  models.py  partitions.py  readiness.py  schema.py  universe.py  validation.py
tests/: r4_fixtures.py  test_admission.py  test_alerts.py  test_alignment_audit.py  test_alpaca_source.py  test_api.py  test_api_security.py  test_architecture_boundaries.py  test_canonical_cli.py  test_canonical_data.py  test_catalyst_overlay.py  test_causal_shadow.py  test_cli_surfaces.py  test_config_secrets.py  test_dependency_boundaries.py  test_deployment.py  test_drift.py  test_drift_policy.py  test_entry_exit.py  test_event_reconciliation.py  test_event_relevance_state.py  test_feature_store.py  test_gdelt.py  test_global_context.py  test_intraday_catalysts.py  test_intraday_confirmation.py  test_intraday_dataset_v1.py  test_intraday_enrichment.py  test_intraday_model_v1.py  test_intraday_universe.py  test_investment_replay.py  test_label_config.py  test_label_paths.py  test_label_reconciliation.py  test_local_release.py  test_locking_and_quota.py  test_market_regime.py  test_ohlcv_contract.py  test_outcome_commands.py  test_outcome_intents.py  (+37 more)
tests/fixtures/: cli_command_inventory.json
