[project]
name = "market-predictor"
version = "0.1.0"
description = "Ticker-level market prediction pipeline using news, filings, sentiment, and price movement."
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.12.3",
    "joblib>=1.4.2",
    "numpy>=1.26.4",
    "pandas>=2.2.2",
    "pyarrow>=16.1.0",
    "pydantic>=2.8.2",
    "pydantic-settings>=2.3.4",
    "python-dotenv>=1.0.1",
    "requests>=2.32.3",
    "rich>=13.7.1",
    "scikit-learn>=1.5.1",
    "torch>=2.3.1",
    "transformers>=4.43.3",
    "typer>=0.12.3",
    "yfinance>=0.2.40",
    "azure-storage-blob>=12.20.0",
    "azure-identity>=1.17.0",
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0"
]

[project.optional-dependencies]
dev = [
    "mypy>=1.15,<2",
    "ruff>=0.11,<1",
]
ranking = [
    "xgboost>=3.0,<4",
]

[project.scripts]
market-predictor = "market_predictor.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/market_predictor"]

[tool.ruff]
line-length = 140
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["B008"] # Typer declares CLI metadata through Option/Argument defaults.

[tool.mypy]
python_version = "3.11"
strict = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["joblib.*", "pandas.*", "sklearn.*"]
ignore_missing_imports = true
