[project]
name = "market-predictor"
version = "0.1.0"
description = "Ticker-level market prediction pipeline using news, filings, sentiment, and price movement."
requires-python = ">=3.11"
dependencies = [
    "cryptography>=43,<50",
    "exchange-calendars>=4.13.2,<5",
    "fastapi>=0.111,<1",
    "joblib>=1.4.2,<2",
    "numpy>=1.26.4,<3",
    "pandas>=2.2.2,<4",
    "pyarrow>=16.1,<25",
    "pydantic>=2.8.2,<3",
    "pydantic-settings>=2.3.4,<3",
    "PyJWT[crypto]>=2.13,<3",
    "python-dotenv>=1.0.1,<2",
    "requests>=2.32.3,<3",
    "rich>=13.7.1,<16",
    "scikit-learn>=1.5.1,<2",
    "typer>=0.12.3,<1",
    "uvicorn>=0.30,<1",
]

[project.optional-dependencies]
collection = [
    "azure-identity>=1.17,<2",
    "azure-storage-blob>=12.20,<13",
    "beautifulsoup4>=4.12.3,<5",
    "yfinance>=0.2.40,<2",
]
training = [
    "torch>=2.3.1,<3",
    "transformers>=4.43.3,<6",
    "xgboost>=3,<4",
]
ranking = [
    "xgboost>=3,<4",
]
research = [
    "azure-identity>=1.17,<2",
    "azure-storage-blob>=12.20,<13",
    "beautifulsoup4>=4.12.3,<5",
    "torch>=2.3.1,<3",
    "transformers>=4.43.3,<6",
    "xgboost>=3,<4",
    "yfinance>=0.2.40,<2",
]
dev = [
    "editables>=0.6,<1",
    "hatchling==1.31.0",
    "httpx>=0.28,<1",
    "mypy>=1.15,<2",
    "pip-audit>=2.10,<3",
    "pip-licenses>=5.5,<6",
    "ruff>=0.11,<1",
    "uv==0.11.32",
]

[project.scripts]
market-predictor-prod = "market_predictor.production_cli:app"
market-predictor-collect = "market_predictor.collection_cli:app"
market-predictor-research = "market_predictor.research_cli:app"

[build-system]
requires = ["hatchling==1.31.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/market_predictor"]

[tool.ruff]
line-length = 140
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["B008"] # Typer declares CLI metadata through Option/Argument defaults.

[tool.mypy]
python_version = "3.11"
strict = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["exchange_calendars", "exchange_calendars.*", "joblib.*", "pandas.*", "pyarrow.*", "sklearn.*", "yfinance", "yfinance.*"]
ignore_missing_imports = true
